After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702202 - conform tests hang on wayland
conform tests hang on wayland
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-06-13 20:25 UTC by U. Artie Eoff
Modified: 2013-06-28 10:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: Do not poll the Wayland socket for events (2.40 KB, patch)
2013-06-27 13:54 UTC, Rob Bradford
accepted-commit_now Details | Review
wayland: Do not poll the Wayland socket for events (2.40 KB, patch)
2013-06-27 14:42 UTC, Rob Bradford
none Details | Review
wayland: Do not poll the Wayland socket for events (2.34 KB, patch)
2013-06-27 14:57 UTC, Rob Bradford
committed Details | Review

Description U. Artie Eoff 2013-06-13 20:25:56 UTC
The following conform tests hang when ran on Wayland/Weston:

export COGL_RENDERER=wayland
export CLUTTER_BACKEND=wayland

./test-conformance -k --verbose -p /conform/texture/cairo/texture_cairo
./test-conformance -k --verbose -p /conform/texture/texture_fbo
./test-conformance -k --verbose -p /conform/actor/actor_offscreen_redirect

These tests don't hang on other backends.

System:

wayland (master) heads/master-0-gbca4124
fontconfig (master) heads/master-0-gcd9b103
drm (master) heads/master-0-ga0178c0
mesa (master) heads/master-0-g6057d7b
libxkbcommon (master) xkbcommon-0.3.1-0-g9f01bd1
pixman (master) heads/master-0-g279bdcd
cairo (master) heads/master-0-gc51b850
weston (master) heads/master-0-g26ed73c
cogl (cogl-1.16) heads/cogl-1.16-0-g534e535
clutter (clutter-1.16) heads/clutter-1.16-0-gfa933b5
Comment 1 Rob Bradford 2013-06-27 13:54:11 UTC
Created attachment 247905 [details] [review]
wayland: Do not poll the Wayland socket for events

Since Cogl also polls on this file descriptor we can get into situations
where our event source is woken up to handle events but those events
have instead been handled by Cogl resulting in the source sitting in
poll().

We can safely rely on Cogl to handle the polling on the event source and
to dispatch those events.
Comment 2 Emmanuele Bassi (:ebassi) 2013-06-27 13:58:28 UTC
Review of attachment 247905 [details] [review]:

looks okay to me.
Comment 3 Rob Bradford 2013-06-27 14:42:11 UTC
Created attachment 247911 [details] [review]
wayland: Do not poll the Wayland socket for events

Since Cogl also polls on this file descriptor we can get into situations
where our event source is woken up to handle events but those events
have instead been handled by Cogl resulting in the source sitting in
poll().

We can safely rely on Cogl to handle the polling on the event source and
to dispatch those events.
Comment 4 Rob Bradford 2013-06-27 14:57:46 UTC
Created attachment 247914 [details] [review]
wayland: Do not poll the Wayland socket for events

Since Cogl also polls on this file descriptor we can get into situations
where our event source is woken up to handle events but those events
have instead been handled by Cogl resulting in the source sitting in
poll().

We can safely rely on Cogl to handle the polling on the event source and
to dispatch those events.
Comment 5 Rob Bradford 2013-06-28 10:39:29 UTC
Attachment 247914 [details] pushed as cba63dd - wayland: Do not poll the Wayland socket for events